--- a/currnverter.css
+++ b/currnverter.css
@@ -1,38 +1,39 @@
-*{
+body, *{
     margin: 0;
     padding: 0;
+    border: none;
+    font-size: 100%;
 }
+
 body{
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     background-color: #9e9e9e;
     color: #f5f5f5;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     
 }
 
 header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: #616161;
     color: #BDBDBD;
     width: 100%;
-    height: 7.5vh;
+    height: 10%;
     font-family: Arial;
 }
 
 h1{
+    padding: 1% 0;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 #screen{
-    margin: 5% 0;
-	width: 100%;
-    height: 12.5vh;
-    border: solid thin #616161;
+    margin: 5% 1.5%;
+	width: 97%;
+    height: 40%;
+    border: solid 1px #616161;
     border-radius: 5%;
     background-color: #607d8b70;
 }
@@ -40,48 +41,51 @@ h1{
 #screen-top, #screen-bottom{
     display: flex;
     flex-flow: row nowrap;
-    padding: 1% 3px;
     color: #2f2f2f;
+    height: 50%;
+    align-items: center;
+}
+
+#screen-top{
+    
 }
 
 #screen-bottom{
-    flex-flow: row-reverse nowrap;
+    flex-direction: row-reverse;
 }
 
 #convert-from, #convert-to{
     width: 100%;
-    border: dotted #bdbdbd thin;
     background-color: #616161;
     color: #f5f5f5;
 }
 
 .screen-forms{
-    width: 9%;
+    width: 2%;
+    margin-bottom: auto
 }
 
 .converts{
-    margin: 0 12px;
-    font-size: 3rem;
+    margin: 0 1%;
+    padding: 0;
     font-family: Arial;
+    font-size: 3rem;
+    font-weight: 300;
 }
 
 #buttons{
-    align-items: baseline;
     display: grid;
-    grid-template: auto auto auto / auto auto auto;
-    grid-row-gap: 20px;
-    grid-column-gap: 5%;
+    width: 95%;
+    grid-template: repeat(4, 4rem)/ auto auto auto;
+    grid-gap: 2% 1%;
     border: thin #616161 dashed;
-    margin: auto;
+    margin: 0 2.5%;
+    margin-top: 10%;
 }
 
 button{
     background-color: #607D8B;
     text-align: center;
     font-size: 1.5rem;
-    font-weight: 700;
-    height: 4rem;
-    width: 100%;
-    border-radius: 30%;
-    margin: auto;
+    border-radius: 10% / 12.5%;
 }
